--- a/WebApp_Desafio_FrontEnd/Views/Chamados/Cadastrar.cshtml
+++ b/WebApp_Desafio_FrontEnd/Views/Chamados/Cadastrar.cshtml
@@ -18,14 +18,14 @@
             <div class="row">
                 <div class="form-group col-lg-7 col-md-6 col-sm-12">
                     <label class="form-label" asp-for="Assunto"></label>
-                    <input type="text" class="form-control" asp-for="Assunto">
+                    <input type="text" class="form-control" asp-for="Assunto" required minlength="5" maxlength="256">
                     <span class="text-danger" asp-validation-for="Assunto"></span>
                 </div>
             </div>
             <div class="row">
                 <div class="form-group col-lg-7 col-md-6 col-sm-12">
                     <label class="form-label" asp-for="Solicitante"></label>
-                    <input type="text" class="form-control" asp-for="Solicitante">
+                    <input type="text" id="autocomplete" class="form-control" asp-for="Solicitante" required minlength="5" maxlength="100">
                     <span class="text-danger" asp-validation-for="Solicitante"></span>
                 </div>
             </div>
